--- a/src/instrument-id/play/listening-skills/level/choice/Choice.css
+++ b/src/instrument-id/play/listening-skills/level/choice/Choice.css
@@ -4,7 +4,7 @@
 
 .Choice-wrapper {
   position: absolute;
-  z-index: 25;
+  z-index: 3;
   padding: 50px;
   width: 85%;
 }
